--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>SirKalach</title>
+    <title>T.J. Snape</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
@@ -20,11 +20,11 @@
     <div id="about">
         <header class="Back-clean">
             <div class="col-md-6 col-lg-4 m-sm-auto item"><img class="rounded-circle" src="assets/img/sirkiraz.jpg">
-                <h3 class="font-monospace text-capitalize text-black-50 name">Süleyman Cem Kalach</h3>
-                <p class="title">Network Engineer</p>
+                <h3 class="font-monospace text-capitalize text-black-50 name">T.J. Snape</h3>
+                <p class="title">Graphic Designer</p>
             </div>
             <div class="container text-center">
-                <p class="lead font-monospace text-break text-capitalize text-center text-sm-center text-md-center text-lg-center text-xxl-center d-xl-flex justify-content-xl-center align-items-xl-start description" title="00oıjıoj">Hello World <br>I am a software developer from Denmark. I am currently pursuing my higher studies.<br>I do mobile app developement, web developement and cyber security for different clients world wide.<br></p>
+                <p class="lead font-monospace text-break text-capitalize text-center text-sm-center text-md-center text-lg-center text-xxl-center d-xl-flex justify-content-xl-center align-items-xl-start description" title="00oıjıoj">Hello World <br>I am a graphic designer from Cleveland.<br>I do freelance work but am open to other opportunities.<br></p>
                 <div class="intro"></div>
             </div>
         </header>
