--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="text-center" id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="54">
     <div id="about">
         <header class="Back-clean">
-            <div class="col-md-6 col-lg-4 m-sm-auto item"><img class="rounded-circle" src="assets/img/sirkiraz.jpg">
+            <div class="col-md-6 col-lg-4 m-sm-auto item"><img class="rounded-circle" src="assets/img/logo.jpeg">
                 <h3 class="font-monospace text-capitalize text-black-50 name">T.J. Snape</h3>
                 <p class="title">Graphic Designer</p>
             </div>
